src/main/java/com/example/bankcards/exception/error/CardNotFoundById.java
package com.example.bankcards.exception.error;

public class CardNotFoundById extends RuntimeException {
    public CardNotFoundById(String message) {
        super(message);
    }
}
